--- a/partials/_variables.css
+++ b/partials/_variables.css
@@ -27,5 +27,6 @@ html,body{
     /* Font family variables */
     --roboto: 'Roboto', cursive;
     --rocket: 'ROCKET WILDNESS';
+    --pacifico: 'Pacifico', cursive;
 
 }
