--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,11 +1,9 @@
-
-
-
 /* If the viewport is <= 340px */
-@media only screen and (max-wodth: 340px){
+@media only screen and (max-width: 340px){
+    /* START Header Area */
     .header_area.main-menu.navbar,
     .header_area.main-menu.navbar .navbar-brand{
-        padding: 2%;
+        padding: 0%;
         margin: 0;
     }
 
@@ -13,10 +11,81 @@
         font-size: 41px;
     }
 
+    #profile-pic {
+        padding-top: 0;
+        height: 200px;
+        width: 200px; 
+        background-color: aqua;
+
+    }
+
+    .container-fluid {
+        padding-right:0;
+        padding-left:0;
+        margin-right:auto;
+        margin-left:auto;
+        background-color: blue;
+     }
+
+    /* END Header Area */
+
+
+    /* START About Me Section */
+    .about-area {
+        padding: 0;
+    }
+
+    .about-area .about-title {
+        padding: 0;
+    }
+
+    .about-image {
+        height: 210px;
+        width: 210px;
+    }
+
+    .site-main .about-area .about-title h2 > span {
+       font-size: 21px;
+       letter-spacing: 0px;
+    }
+
+    .site-main .about-area .about-title .paragraph > p {
+        padding: 0px;
+        text-align: center;
+    }
+
+
+    /* END About Me Section */
+
+
+
+
+
+    /* START Project Section */
+    .new-projects button {
+        padding: 0px;        
+
+    }
+
+    /* END Project Section */
+
+
+
+
+
+    /* START Footer Section */
+
+
+    /* END Footer Section */
+
+
+
+    
+
 }
 
 /* If the viewport is <= 792px */
-@media only screen and (max-wodth: 792px){
+@media only screen and (max-width: 792px){
     .site-main .about-area .about-title h2 > span {
         font-size: 31px;
         letter-spacing: 10px;
@@ -30,7 +99,7 @@
 
 
 /* If the viewport is <= 1910px */
-@media only screen and (max-wodth: 1910px){
+@media only screen and (max-width: 1910px){
     .header_area.main-menu.navbar{
         padding: 1rem;
     }
