Made small little detailed changes

--- a/css/style.css
+++ b/css/style.css
@@ -67,8 +67,8 @@ html {
     content: "";
     height: 2px;
     width: 18vw;
-    background: black;
-    display: inline-block;
+    /* background: black;
+    display: inline-block; */
     margin-left: 5%;
     transform: translateY(-10px);
 }
@@ -228,7 +228,8 @@ html {
 }
 #project-title {
   padding-top: 40px;
-  font: normal 500 30px/50px var(--roboto);
+  font: normal bold 50px/72px var(--roboto);
+  
 }
 
 #new-project-title{
