--- a/css/style.css
+++ b/css/style.css
@@ -1327,9 +1327,310 @@ footer.footer-area .social a:hover > i {
 
 /* End Footer Area */
 
+
+/* Media Queries *?
+
+/* Contact form  stuff */
+ /*
 body {
-    overflow-x: none;
+  overflow-x: none;
+}
+
+#my-form {
+  
+}
+
+#contact-text {
+  font: normal 700 25px/2px var(--roboto);
+  color: rgb(75, 67, 67);
+}
+
+.contact-form-edit {
+  overflow-x: none;
+  
+
+  font: normal 700 25px/2px var(--roboto);
+  color: rgb(0, 0, 0);
+  text-align: center;
+  font-weight: 300;
+  -webkit-font-smoothing: antialiased;
+}
+
+#contact-form {
+  max-width: 90%;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+label {
+  font-weight: 400;
+  cursor: pointer;
+}
+
+textarea,
+input {
+  border: none;
+  outline: none;
+  border-radius: 0;
+  text-align: center;
+  background: none;
+  
+
+  font: normal 700 25px/2px var(--roboto);
+  color: rgb(5, 5, 5);
+  max-width: 90%;
+  padding: 1rem;
+  border: 2px dashed rgba(255, 255, 255, 0);
+  box-sizing: border-box;
+  cursor: text;
+  
+}
+
+textarea {
+  text-align: left;
+  
+  
+  resize: none;
+  width: 90%;
+  border-color: rgba(255, 255, 255, 0)
+}
+
+textarea:focus {
+  background-color: rgba(255, 51, 51, 0.2);
+  border: 2px dashed rgba(255, 51, 51, 0.2);
+}
+
+textarea:focus:required:valid {
+  border: 2px solid rgba(255, 51, 51, 0.2);
+  border-bottom: 2px solid rgb(255, 36, 36);
+}
+
+textarea:required:valid {
+  border-bottom: 2px solid rgb(255, 36, 36);
+}
+
+input {
+  border-bottom: 2px dashed rgb(255, 36, 36);
+}
+
+input:required,
+textarea:required {
+  border-bottom: 2px dashed rgb(255, 36, 36);
+}
+
+input:focus {
+  border-bottom: 2px dashed rgba(255, 51, 51, 0.2);
+  background-color: rgba(255, 51, 51, 0.2);
+}
+
+input:required:valid {
+  border-bottom: 2px solid rgba(173, 173, 173, 0.63);
+}
+
+input:required:invalid {
+  color: rgba(173, 173, 173, 0.63);
+}
+
+::-webkit-input-placeholder {
+  text-align: center;
+  color: rgba(112, 112, 112, 0.63);
+  font-style: italic;
+  font-weight: 400;
 }
 
 
-/* Media Queries *?
+:-ms-input-placeholder {
+  text-align: center;
+  color: rgba(112, 112, 112, 0.63);
+  font-style: italic;
+  font-weight: 400;
+}
+
+.expanding {
+  vertical-align: top;
+}
+
+.send-icn {
+  fill: rgb(0, 0, 0);
+}
+
+.send-icn:hover {
+  fill: rgb(253, 133, 133);
+  cursor: pointer; 
+}
+
+
+
+button:hover small {
+  opacity: 1;
+  color: rgb(253, 133, 133);;
+}
+
+small {
+  display: block;
+  opacity: 0;
+}
+
+.website {
+  opacity: 1;
+  font-size: 16px;
+  color: rgb(0, 0, 0);
+  position: relative;
+  text-align: center;
+  display: block;
+  margin-top: 7%;
+  
+}
+
+.website a {
+  color: rgb(253, 90, 90);
+} */
+
+
+
+/* AGAIN */
+.contact-text {
+  font-family: 'Roboto', cursive;
+}
+
+.new-form {
+  font-family: 'Roboto', cursive;
+  font-size: 25px;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  font-weight: 300;
+  -webkit-font-smoothing: antialiased;
+}
+
+#contact-form {
+  max-width: 90%;
+  margin: 0 auto;
+}
+
+label {
+  font-weight: 400;
+  cursor: pointer;
+}
+
+textarea,
+input {
+  border: none;
+  outline: none;
+  border-radius: 0;
+  text-align: center;
+  background: none;
+  font-weight: 700;
+  font-family: 'Roboto', cursive;
+  font-size: 25px;
+  color: rgb(0, 0, 0);
+  max-width: 90%;
+  padding: 1rem;
+  box-sizing: border-box;
+  cursor: text;
+}
+
+textarea {
+  text-align: left;
+  /* overflow:hidden; */
+  
+  resize: none;
+  width: 90%;
+  color: rgb(251, 112, 112);
+}
+
+textarea:focus {
+  background-color: rgba(253, 63, 63, 0.2);
+}
+
+textarea:focus:required:valid {
+  border-bottom: 2px solid rgb(251, 112, 112);
+}
+
+textarea:required:valid {
+  border-bottom: 2px solid rgb(251, 112, 112);
+}
+
+input {
+  border-bottom: 2px dashed rgb(251, 112, 112);
+  color: rgb(251, 112, 112);
+}
+
+input:required,
+textarea:required {
+  border-bottom: 2px dashed rgb(251, 112, 112);
+}
+
+input:focus {
+  border-bottom: 2px dashed rgb(251, 112, 112);
+  /* Input background color */
+  background-color: rgba(253, 63, 63, 0.2);
+}
+
+input:required:valid {
+  border-bottom: 2px solid rgb(251, 112, 112);
+}
+
+input:required:invalid {
+  color: rgb(251, 112, 112);
+}
+
+::-webkit-input-placeholder {
+  text-align: center;
+  color: rgb(251, 112, 112);
+  font-style: italic;
+  font-weight: 400;
+}
+
+
+
+:-ms-input-placeholder {
+  text-align: center;
+  color: rgb(251, 112, 112);
+  font-style: italic;
+  font-weight: 400;
+}
+
+.expanding {
+  vertical-align: top;
+}
+
+.send-icn {
+  fill: rgb(0, 0, 0)
+}
+
+.send-icn:hover {
+  fill: rgb(255, 67, 67);
+  cursor: pointer;
+}
+
+#submit-button {
+  background: none;
+  border: none;
+  outline: none;
+  margin: 2vmax;
+}
+
+button:hover small {
+  opacity: 1;
+  color: rgb(255, 67, 67);
+}
+
+small {
+  display: block;
+  opacity: 0;
+}
+
+.website {
+  opacity: 1;
+  font-size: 16px;
+  color: rgb(251, 112, 112);
+  position: relative;
+  text-align: center;
+  display: block;
+  margin-top: 7%;
+  
+}
+
+.website a {
+  color: rgb(246, 18, 18);
+}
