Made font updates

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,21 @@
 /* import fonts from fonts.css file */
 @import url(./fonts.css);
 
+@font-face {
+  font-family: 'roboto';
+    src: url('../fonts/Roboto-2/Roboto-Medium.ttf');
+    font-weight: 500;
+}
+
+@font-face {
+  font-family: 'roboto';
+    src: url('../fonts/Roboto-2/Roboto-Black.ttf');
+    font-style: normal;
+    font-weight: 600;
+}
+
+
+
 /* css variables */
 @import  url(../partials/_variables.css);
 
@@ -24,7 +39,8 @@ html {
 } 
 
 .header_area .main-menu .nav-item .nav-link {
-    font: normal 500 15px/2px var(--roboto);
+    font: normal 500 15px/2px roboto;
+    font-family: roboto-title;
     text-transform: uppercase;
     color:var(--title-color);
     padding: 1.7rem;
@@ -61,6 +77,7 @@ html {
 .site-main .site-banner .site-title h3 {
     padding-top: 35%;
     font-weight: 500;
+    font-family: roboto;
 }
 
 .site-main .site-banner .site-title h3::after {
@@ -111,7 +128,8 @@ html {
 
 .site-main .about-area .about-title h2 > span {
     display: block;
-    font: normal bold 49px/60px var(--roboto);
+    font: normal bold 49px/60px roboto;
+    font-family: roboto;
     letter-spacing: 2px;
     padding: 0 1.2rem;
 }
@@ -127,7 +145,7 @@ html {
 .site-main .project-area .button-group button {
     background: transparent;
     border: none;
-    font: normal 500 16px/130px var(--roboto);
+    font: normal 500 16px/130px roboto;
     text-transform: uppercase;
 }
 
@@ -137,7 +155,7 @@ html {
 }
 
 .site-main .project-area .grid .out-project > .title h4 {
-    font: normal 700 25px/12px var(--roboto);
+    font: normal 700 25px/12px roboto;
 } */
 
 
@@ -157,13 +175,12 @@ html {
 .projects {
   
   justify-content: center;
-  font: var(--roboto);
+  font: roboto;
 }
 
 .projects .row {
   padding: 15px 180px;
 }
-
 
 
 /* New */
@@ -216,6 +233,15 @@ html {
   text-align: center;
 }
 
+
+
+.title-text {
+  font-family: roboto;
+  font-weight: 600;
+  font-size: 70px;
+  padding: 15px;
+}
+
     
 
 /****** START PROJECTS SECTION ******/ 
@@ -228,7 +254,8 @@ html {
 }
 #project-title {
   padding-top: 40px;
-  font: normal bold 50px/72px var(--roboto);
+  font: normal bold 50px/72px roboto;
+  font-family: roboto;
   
 }
 
@@ -255,7 +282,8 @@ html {
 
 #video-para {
   padding: 150px;
-  font: normal 35px/45px var(--roboto);
+  font: normal 35px/45px roboto;
+  font-family: roboto;
 }
 
 
@@ -294,7 +322,8 @@ html {
 }
 
 .modal-content .para-bold {
-  font: normal 20px/25px var(--roboto);
+  font: normal 20px/25px roboto;
+  font-family: roboto;
   color: rgb(0, 0, 0);
 }
 
@@ -323,7 +352,7 @@ html {
 }
 
 #porsche-title {
-  font: normal 35px/25px var(--roboto);
+  font: normal 35px/25px roboto;
   padding-top: 15px;
   padding-bottom: 15px;
 }
@@ -355,12 +384,12 @@ a:hover > i {
 }
 
 .para-bold {
-  font: normal 500 23px/30px var(--roboto);
+  font: normal 500 23px/30px roboto;
   color: black;
 }
 
 .para {
-  font: normal 500 23px/30px var(--roboto);
+  font: normal 500 23px/30px roboto;
 }
 
 
@@ -1311,7 +1340,7 @@ footer.footer-area {
 }
 
 footer.footer-area .social h5{
-    font: normal 500 23px/30px var(--roboto);
+    font: normal 500 23px/30px roboto;
 }
 
 footer.footer-area .social a > i {
@@ -1341,7 +1370,7 @@ body {
 }
 
 #contact-text {
-  font: normal 700 25px/2px var(--roboto);
+  font: normal 700 25px/2px roboto;
   color: rgb(75, 67, 67);
 }
 
@@ -1349,7 +1378,7 @@ body {
   overflow-x: none;
   
 
-  font: normal 700 25px/2px var(--roboto);
+  font: normal 700 25px/2px roboto;
   color: rgb(0, 0, 0);
   text-align: center;
   font-weight: 300;
@@ -1376,7 +1405,7 @@ input {
   background: none;
   
 
-  font: normal 700 25px/2px var(--roboto);
+  font: normal 700 25px/2px roboto;
   color: rgb(5, 5, 5);
   max-width: 90%;
   padding: 1rem;
